--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ android {
     }
 
     buildToolsVersion '27.0.1'
+    lintOptions {
+        abortOnError false
+    }
 
     buildTypes {
         release {
@@ -34,6 +37,10 @@ android {
                 proguardFile 'proguard-rules.pro'
             }
         }
+    }
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
     }
 }
 
@@ -86,5 +93,5 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:" + rootProject.glideVersion
     kapt "com.github.bumptech.glide:compiler:" + rootProject.glideVersion
 
-
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
